赞赏图片放大

--- a/content/posts/tech/Java/数字人民币支付.md
+++ b/content/posts/tech/Java/数字人民币支付.md
@@ -1,5 +1,5 @@
 ---
-title: "数据人民币支付"
+title: "数字人民币支付"
 date: 2022-09-28T00:17:58+08:00
 lastmod: 2022-09-29T00:17:58+08:00
 author: ["藏锋"]
@@ -20,7 +20,7 @@ mermaid: true #是否开启mermaid
 showToc: true # 显示目录
 TocOpen: true # 自动展开目录
 hidemeta: false # 是否隐藏文章的元信息，如发布日期、作者等
-disableShare: true # 底部不显示分享栏
+disableShare: false # 底部不显示分享栏
 showbreadcrumbs: true #顶部显示路径
 cover:
     image: "" #图片路径例如：posts/tech/123/123.png
