打赏修改格式，内容更新

--- a/content/posts/tech/Java/微信支付.md
+++ b/content/posts/tech/Java/微信支付.md
@@ -1,5 +1,5 @@
 ---
-title: "微信支付"
+title: "springboot接入微信支付"
 date: 2022-09-26T00:17:58+08:00
 lastmod: 2022-09-29T00:17:58+08:00
 author: ["藏锋"]
@@ -9,8 +9,8 @@ categories:
 - tech
 tags: 
 - java
-- tech
-description: "小程序使用微信支付开发demo"
+- 微信支付
+description: "小程序使用微信支付（需要商家申请号商户号才能开发）"
 weight:
 slug: ""
 draft: false # 是否为草稿
@@ -26,19 +26,22 @@ showbreadcrumbs: true #顶部显示路径
 
 # 微信支付
 框架为springboot，需要在小程序的后端服务中，使用接微信支付；
-在网上选择了很多的技术选型，发现如果是自己封装，一个是太繁琐，还有就是不方便维护，发现一个比较好的springboot包
-官网地址：[Document (notfound403.github.io)](https://notfound403.github.io/payment-spring-boot/#/)
+在网上选择了很多的技术选型，发现如果是自己封装，一个是太繁琐，还有就是不方便维护，发现一个比较好的springboot包。
+
+官网地址：‘[Document (notfound403.github.io)](https://notfound403.github.io/payment-spring-boot/#/)’
 ## Spring boot依赖包
-### ==pom引用==：
-<dependency>  
+### pom引用
+
+	<dependency>  
     <groupId>cn.felord</groupId>  
     <artifactId>payment-spring-boot-starter</artifactId>  
     <version>1.0.11.RELEASE</version>  
-</dependency>
+	</dependency>
 导入之后，可以直接引用
-但是直接用别的依赖，容易出问题，将源码拿过来，自己封装了下，对接微信支付V3的大部分SDK了
-### ==源码地址==：
-GitHub：[GitHub - NotFound403/payment-spring-boot: 微信支付V3，微信优惠券，代金券、公众号支付、微信小程序支付、分账、支付分、商家券](https://github.com/NotFound403/payment-spring-boot)
+
+但是建议直接用别的依赖，如果人家停止维护了，还得重新搞一遍，可以学习下人家的源码，自己封装了下，对接微信支付V3的大部分SDK了
+### 源码地址
+>GitHub：[GitHub - NotFound403/payment-spring-boot: 微信支付V3，微信优惠券，代金券、公众号支付、微信小程序支付、分账、支付分、商家券](https://github.com/NotFound403/payment-spring-boot)
 
 封装后引用与直接引用效果是一样的
 ## 实现:
@@ -205,6 +208,6 @@ wechatApiProvider.callback(TENANT_ID).refundCallback(params, data -> {
 });
 ```
 
-如上包含了基本支付的一套流程了，还有其他如账单下载，订单查询，关闭订单，积分支付，合并支付等复杂的接口，可以自己研究，封装类里面都已经包含了
+   如上包含了基本支付的一套流程了，还有其他如账单下载，订单查询，关闭订单，积分支付，合并支付等复杂的接口，可以自己研究，封装类里面都已经包含了
 
 ---
