--- a/content/posts/tech/Java/数字人民币支付.md
+++ b/content/posts/tech/Java/数字人民币支付.md
@@ -9,7 +9,8 @@ categories:
 - tech
 tags: 
 - java
-- tech
+- 支付
+- 数字人民币
 description: "数据人民币支付-对接苏州建行"
 weight:
 slug: ""
@@ -28,9 +29,9 @@ cover:
     alt: ""
     relative: false
 ---
-
-数字货币支付，是对接的建行熊猫支付，通过微信小程序，跳转至建行数字货币支付的小程序中，进行支付
-## 小程序支付
+# 数字人民币支付
+## 背景：
+	数字货币支付，是对接的建行熊猫支付，通过微信小程序，跳转至建行数字货币支付的小程序中，进行支付，唯一的不好，就是回调的地址是在建行写死的，这样导致测试与开发环境，都是同一个回调地址，调试起来不太方便！
 
 ## 支付逻辑
 后端：根据订单价格，商户号等，生成URL
