--- a/content/posts/tech/Java/数字人民币支付.md
+++ b/content/posts/tech/Java/数字人民币支付.md
@@ -14,7 +14,7 @@ tags:
 description: "数据人民币支付-对接苏州建行"
 weight:
 slug: ""
-draft: false # 是否为草稿
+draft: true # 是否为草稿
 comments: true
 reward: true # 打赏
 mermaid: true #是否开启mermaid
