--- a/content/posts/tech/Java/登录框架.md
+++ b/content/posts/tech/Java/登录框架.md
@@ -43,7 +43,7 @@ cover:
 @EnableGlobalMethodSecurity(prePostEnabled = true)  
 public class WebSecurityConfig extends WebSecurityConfigurerAdapter {  
   
-    private static final String[] EXCLUDE_URL = {"/doc.html","/app/login"};  
+    private static final String[] EXCLUDE_URL = {"/doc.html","/login"};  
     /**  
      * 认证失败处理类  
      */  
@@ -87,7 +87,7 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
      */  
     @Override  
     public void configure(WebSecurity web) {  
-        web.ignoring().antMatchers("/doc.html", "/webjars/**", "/**/api-docs/**","/login","/pay/callback","/pay/refundCallback","/pay/digital-callback");  
+        web.ignoring().antMatchers("/doc.html", "/webjars/**", "/**/api-docs/**","/login","/pay/callback","/pay/refundCallback","/pay/callback");  
     }  
   
     static class TokenConfigurer extends SecurityConfigurerAdapter<DefaultSecurityFilterChain, HttpSecurity> {  
